# pr.sim.legacy-integrator

./: .env-sample  .envrc  .gitignore  CHANGELOG.md  Dockerfile  Jenkinsfile  Makefile  README.md  alembic.ini  docker-compose.yml  flake.nix  manage.py  pyproject.toml  startup.sh
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: action.yml  main.yml  passcheck.yml
.sqlalchemy_cache/: binary_db_metadata
alembic/: env.py
app/: __init__.py  database.py  dependencies.py  enum.py  main.py
app/domain/common/: entity_model_base.py  exception_base.py  legacy_model.py  repository_base.py  service_base.py
app/domain/financing/: financial_calcs.py  repository.py  schemas.py  service.py
app/domain/legacy_query/: enums.py  exceptions.py  repository.py  schemas.py  service.py
app/domain/legacy_query/repository/: formalized.py
app/domain/legacy_query/service/: formalized.py
app/domain/pricing/: model.py  repository.py
app/domain/pricing/migrations/: 2023_01_04_1219_53__979e05ef63d8_create_pricing_calculators_table.py  2023_01_04_1220_23__ceb9d755c585_create_price_rules_table.py  2023_01_04_1220_47__85ffbec7af9e_create_price_strategies_table.py
app/domain/products/: model.py
app/domain/products/migrations/: 2023_01_04_1215_40__07367e1e46ab_create_product_pricing_table.py
app/domain/store/: repository.py  schema.py  service.py
app/domain/user/: repository.py  schema.py  service.py
app/internal/: utils.py
app/internal/config/: __init__.py  observability.py  settings.py
app/internal/keycloak/: auth.py
app/internal/launch_darkly/: __init__.py  launch_darkly_client.py
app/internal/service/: http_service.py  http_service_schema.py
app/routers/: __init__.py  financing.py  healthcheck.py  legacy_query.py  legacy_reading_query.py  store.py  user.py
helm/: artillery.yaml
helm/charts/legacy-integrator/: Chart.yaml  values-stg.yaml  values.yaml
helm/charts/legacy-integrator/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  podDisruptionBudget.yaml  service.yaml  serviceAccount.yaml
integrator/: asgi.py  settings.py  urls.py  wsgi.py
legacy/: models.py
nginx/vhost.d/: default
tests/: conftest.py
tests/integration/: test_routers.py
tests/integration/routers/: test_legacy_reading_query.py
tests/unit/domain/financing/: service_test.py
tests/unit/domain/legacy_query/: test_formalized_service.py
tests/unit/domain/patner_example/: test_service.py
tests/unit/internal/config/: test_config_database.py  test_config_gunicorn.py
