[tool.poetry]
name = "pr-sim-legacy-integrator"
version = "0.1.0"
description = ""
authors = ["Frank Ricardo Ramirez <frank.ramirez@solfacil.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.13.0"
django-environ = "^0.9.0"
django-filter = "^22.1"
drf-yasg = "^1.21.4"
markdown = "^3.4.1"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
