[tool.poetry]
name = "legacy-integrator"
version = "0.1.0"
description = "Legacy Integrator (Simulation)"
authors = ["Frank Ricardo Ramirez <frank.ramirez@solfacil.com.br>"]
readme = "README.md"
repository = "https://github.com/solfacil/pr.sim.legacy-integrator"

[inforamation]
contact = ["Solfacil Pricing Team", "frank.ramirez@solfacil.com.br"]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.8.1"
async-lru = "^1.0.3"
ddtrace = "^1.6.3"
email-validator = "^1.3.0"
fastapi = "^0.88.0"
gunicorn = "^20.1.0"
httpx = "^0.23.1"
loguru = "^0.6.0"
launchdarkly-server-sdk = "^8.0.0"
psycopg2-binary = "^2.9.5"
pydantic = "^1.10.2"
PyJWT = "^2.6.0"
sentry-sdk = "^1.12.1"
SQLAlchemy = "^1.4.45"
toml = "^0.10.2"
uvicorn = {extras = ["standard"], version = "^0.20.0"}

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
black = "^22.10.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
mock = "^5.0.0"
mypy = "^0.991"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.2"
pytest-cov = "^4.0.0"
pytest-httpx = "^0.21.2"
pytest-mock = "^3.10.0"
pylint = "^2.15.8"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
extend-exclude = '''
    ^/app/domain/common/exception_base.py
'''

[tool.mypy]
ignore_missing_imports = true
disable_error_code = 'attr-defined'

[tool.pylint.format]
max-line-length = 120
ignore-docstrings = false
disable = 'C0114, E0401, R0903, E0611, C0115, E0213, C0116'
ignore = 'migrations'

[tool.coverage.run]
concurrency = [
    'multiprocessing'
]
parallel = true
sigterm = true
branch = true
source = [
    'app/'
]
omit = [
    ".*",
    "*/test/*"
]

[tool.coverage.report]
show_missing = true
sort = 'Miss'
fail_under = 70
skip_empty = true

[tool.coverage.paths]
source = [
    'app/'
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["venv", ".venv", "env", ".env", "scripts"]